Switched the FHIR client connections to SSL using mutual auth.
Note that this commit will knowingly/intentionally break the old
DE-SynPUF-based sample data loader app. Not worth fixing it up, since
we've now moved on to RIF support.

CBBF-30