@@ -1,13 +1,14 @@
 package gov.hhs.cms.bluebutton.datapipeline.app;
 
 import java.io.Serializable;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.nio.file.Paths;
 
 import com.amazonaws.AmazonClientException;
 import com.amazonaws.auth.DefaultAWSCredentialsProviderChain;
 
-import gov.hhs.cms.bluebutton.datapipeline.fhir.load.FhirLoader;
+import gov.hhs.cms.bluebutton.datapipeline.fhir.LoadAppOptions;
 import gov.hhs.cms.bluebutton.datapipeline.rif.extract.s3.DataSetMonitor;
 
 /**
@@ -33,24 +34,51 @@ public final class AppConfiguration implements Serializable {
 
 	/**
 	 * The name of the environment variable that should be used to provide the
-	 * {@link #getFhirServer()} value.
+	 * {@link #getLoadOptions()} {@link LoadAppOptions#getFhirServer()} value.
 	 */
 	public static final String ENV_VAR_KEY_FHIR = "FHIR_SERVER_URL";
 
+	/**
+	 * The name of the environment variable that should be used to provide the
+	 * {@link #getLoadOptions()} {@link LoadAppOptions#getKeyStorePath()} value.
+	 */
+	public static final String ENV_VAR_KEY_KEY_STORE_PATH = "KEY_STORE_PATH";
+
+	/**
+	 * The name of the environment variable that should be used to provide the
+	 * {@link #getLoadOptions()} {@link LoadAppOptions#getKeyStorePassword()}
+	 * value.
+	 */
+	public static final String ENV_VAR_KEY_KEY_STORE_PASSWORD = "KEY_STORE_PASSWORD";
+
+	/**
+	 * The name of the environment variable that should be used to provide the
+	 * {@link #getLoadOptions()} {@link LoadAppOptions#getTrustStorePath()}
+	 * value.
+	 */
+	public static final String ENV_VAR_KEY_TRUST_STORE_PATH = "TRUST_STORE_PATH";
+
+	/**
+	 * The name of the environment variable that should be used to provide the
+	 * {@link #getLoadOptions()} {@link LoadAppOptions#getTrustStorePassword()}
+	 * value.
+	 */
+	public static final String ENV_VAR_KEY_TRUST_STORE_PASSWORD = "TRUST_STORE_PASSWORD";
+
 	private final String s3BucketName;
-	private final URL fhirServer;
+	private final LoadAppOptions loadOptions;
 
 	/**
 	 * Constructs a new {@link AppConfiguration} instance.
 	 * 
 	 * @param s3BucketName
 	 *            the value to use for {@link #getS3BucketName()}
-	 * @param fhirServer
-	 *            the value to use for {@link #getFhirServer()}
+	 * @param loadOptions
+	 *            the value to use for {@link #getLoadOptions()}
 	 */
-	public AppConfiguration(String s3BucketName, URL fhirServer) {
+	public AppConfiguration(String s3BucketName, LoadAppOptions loadOptions) {
 		this.s3BucketName = s3BucketName;
-		this.fhirServer = fhirServer;
+		this.loadOptions = loadOptions;
 	}
 
 	/**
@@ -63,11 +91,10 @@ public final class AppConfiguration implements Serializable {
 	}
 
 	/**
-	 * @return the {@link URL} of the FHIR server that the application's
-	 *         {@link FhirLoader} will be configured to push to
+	 * @return the {@link LoadAppOptions} that the application will use
 	 */
-	public URL getFhirServer() {
-		return fhirServer;
+	public LoadAppOptions getLoadOptions() {
+		return loadOptions;
 	}
 
 	/**
@@ -100,14 +127,34 @@ public final class AppConfiguration implements Serializable {
 		if (fhirServerUrlText == null || fhirServerUrlText.isEmpty())
 			throw new AppConfigurationException(
 					String.format("Missing value for configuration environment variable '%s'.", ENV_VAR_KEY_FHIR));
-		URL fhirServerUrl;
+		URI fhirServerUri;
 		try {
-			fhirServerUrl = new URL(fhirServerUrlText);
-		} catch (MalformedURLException e) {
+			fhirServerUri = new URI(fhirServerUrlText);
+		} catch (URISyntaxException e) {
 			throw new AppConfigurationException(
 					String.format("Invalid value for configuration environment variable '%s': '%s'", fhirServerUrlText),
 					e);
 		}
+
+		String keyStorePath = System.getenv(ENV_VAR_KEY_KEY_STORE_PATH);
+		if (keyStorePath == null || keyStorePath.isEmpty())
+			throw new AppConfigurationException(String
+					.format("Missing value for configuration environment variable '%s'.", ENV_VAR_KEY_KEY_STORE_PATH));
+
+		String keyStorePassword = System.getenv(ENV_VAR_KEY_KEY_STORE_PASSWORD);
+		if (keyStorePassword == null || keyStorePassword.isEmpty())
+			throw new AppConfigurationException(String
+					.format("Missing value for configuration environment variable '%s'.", ENV_VAR_KEY_KEY_STORE_PASSWORD));
+
+		String trustStorePath = System.getenv(ENV_VAR_KEY_TRUST_STORE_PATH);
+		if (trustStorePath == null || trustStorePath.isEmpty())
+			throw new AppConfigurationException(String
+					.format("Missing value for configuration environment variable '%s'.", ENV_VAR_KEY_TRUST_STORE_PATH));
+
+		String trustStorePassword = System.getenv(ENV_VAR_KEY_TRUST_STORE_PASSWORD);
+		if (trustStorePassword == null || trustStorePassword.isEmpty())
+			throw new AppConfigurationException(String.format(
+					"Missing value for configuration environment variable '%s'.", ENV_VAR_KEY_TRUST_STORE_PASSWORD));
 
 		/*
 		 * Just for convenience: make sure DefaultAWSCredentialsProviderChain
@@ -125,6 +172,7 @@ public final class AppConfiguration implements Serializable {
 					DefaultAWSCredentialsProviderChain.class.getName()), e);
 		}
 
-		return new AppConfiguration(s3BucketName, fhirServerUrl);
+		return new AppConfiguration(s3BucketName, new LoadAppOptions(fhirServerUri, Paths.get(keyStorePath),
+				keyStorePassword.toCharArray(), Paths.get(trustStorePath), trustStorePassword.toCharArray()));
 	}
 }
